--- a/css/main.css
+++ b/css/main.css
@@ -11,4 +11,7 @@ header {
 main { 
     display:inline-block;
     width: 800px;
+    margin-left: calc(50% - 400px);
+    margin-right: calc(50% - 400px);
     background-color: pink;
+    }
