--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,75 @@ header {
     width: 800px;
     margin-left: calc(50% - 400px);
     margin-right: calc(50% - 400px);
-    background-color: aqua;
     }
+
+    header > img {
+        display: inline-block;
+        height: 50px;
+        float: left;
+    }
+
+    header > nav {
+        display: inline-block;
+        float: right;
+        margin-top: 6px;
+    }
+
+    nav > a {
+        display: inline-block;
+        line-height: 20px;
+        font-size: 16px;
+        color: #9D9D9D;
+        text-decoration: none;
+        border: 4px solid transparent;
+        padding: 5px;
+        border-radius: 19px;
+    }
+
+    a:last-child {
+        border: 4px solid #9D9D9D;
+        text-transform: uppercase;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: 10px;
+    }
+
 main { 
-    display:inline-block;
-    width: 800px;
-    margin-left: calc(50% - 400px);
-    margin-right: calc(50% - 400px);
-    background-color: pink;
+        display:inline-block;
+        width: 800px;
+        margin-left: calc(50% - 400px);
+        margin-right: calc(50% - 400px);
+    }
+
+    main > div { 
+            display: inline-block;
+            width: 30%;
+            float: left;
+            color: #9F9F9F;
+            margin-top: 60px;
+            margin-left: 2%;
+            
+            }
+
+    div > h1 {
+            display: inline-block;
+            width: 100%;
+            margin: 0;
+            font-size: 80px;
+            line-height: 80px;        
+    }
+
+    div > p { 
+            display: inline-block;
+            width: 100%;
+            margin: 0%;
+            font-size: 24px;
+            line-height: 30px;
+    }
+
+    main > img {
+            display: inline-block;
+            width: 46%;
+            margin-right: 2%;
+            float: right;
     }
