--- a/css/main.css
+++ b/css/main.css
@@ -1,64 +1,62 @@
-body { background-color: #F8F8F8;
+body { 
+    background-color: #F8F8F8;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 header { 
-    display:inline-block;
-    width: 800px;
-    margin-left: calc(50% - 400px);
-    margin-right: calc(50% - 400px);
+        display:inline-block;
+        width: 800px;
+        margin-left: calc(50% - 400px);
     }
 
     header > img {
-        display: inline-block;
         height: 50px;
         float: left;
     }
 
     header > nav {
-        display: inline-block;
         float: right;
         margin-top: 6px;
     }
 
     nav > a {
-        display: inline-block;
-        line-height: 20px;
-        font-size: 16px;
-        color: #9D9D9D;
+        float: left;
+        line-height: 20px; 
+        font-size: 18px;           
+        color: #9f9f9f;
         text-decoration: none;
         border: 4px solid transparent;
         padding: 5px;
         border-radius: 19px;
     }
 
-    a:last-child {
-        border: 4px solid #9D9D9D;
-        text-transform: uppercase;
+    nav > a:last-of-type {
         padding-left: 15px;
         padding-right: 15px;
         margin-left: 10px;
+        border-color: #9f9f9f;
+        text-transform: uppercase;
+        
     }
 
-main { 
+body > main { 
         display:inline-block;
         width: 800px;
+        margin-top: 40px;
         margin-left: calc(50% - 400px);
-        margin-right: calc(50% - 400px);
     }
 
     main > div { 
-            display: inline-block;
             width: 30%;
-            float: left;
-            color: #9F9F9F;
+            float: left;            
             margin-top: 60px;
             margin-left: 2%;
-            
+            color: #9F9F9F;            
             }
 
     div > h1 {
             display: inline-block;
-            width: 100%;
+            width: 100%;        
             margin: 0;
             font-size: 80px;
             line-height: 80px;        
@@ -73,8 +71,8 @@ main {
     }
 
     main > img {
-            display: inline-block;
             width: 46%;
-            margin-right: 2%;
             float: right;
+            margin-right: 2%;
+            
     }
